20240430 WPF 2일차 완료

--- a/day1/wpf01_basic_app/ex04_wpf_bikeshop/ContactPage.xaml
+++ b/day1/wpf01_basic_app/ex04_wpf_bikeshop/ContactPage.xaml
@@ -17,5 +17,6 @@
         <TextBox Margin="77,14,31,0" TextWrapping="Wrap" 
                  VerticalAlignment="Top" ToolTip="받는 사람 주소"/>
         <TextBox Margin="77,45,31,19" TextWrapping="Wrap" ToolTip="내용입력"/>
+        <Label
     </Grid>
 </Page>
