--- a/day05/wpf05_mvvm_basic/ex10_MovieFinder2024/App.xaml
+++ b/day05/wpf05_mvvm_basic/ex10_MovieFinder2024/App.xaml
@@ -1,18 +1,16 @@
-﻿<Application x:Class="ex07_EmployeeMngApp.App"
+﻿<Application x:Class="ex10_MovieFinder2024.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ex07_EmployeeMngApp">
+             xmlns:local="clr-namespace:ex10_MovieFinder2024"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary>
-                    <local:Bootstrapper x:Key="bootstrapper" />
-                </ResourceDictionary>
                 <!-- MahApps.Metro 적용 스타일 시작 -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <!-- Theme : Light/Dark 선택 및 23색상 중 선택 적용 -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Cyan.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Red.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
