--- a/day05/wpf05_mvvm_basic/ex10_MovieFinder2024/MainWindow.xaml
+++ b/day05/wpf05_mvvm_basic/ex10_MovieFinder2024/MainWindow.xaml
@@ -60,7 +60,15 @@
         <DataGrid x:Name="GrdResult" Grid.Row="1" Grid.Column="0" Margin="5"
                   IsReadOnly="True" ItemsSource="{Binding}"
                   Style="{StaticResource MahApps.Styles.DataGrid.Azure}" 
-                  SelectedCellsChanged="GrdResult_SelectedCellsChanged"/>
+                  SelectedCellsChanged="GrdResult_SelectedCellsChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Title}" Header="한글 제목" FontWeight="Bold" />
+                <DataGridTextColumn Binding="{Binding Original_Title}" Header="원제목" />
+                <DataGridTextColumn Binding="{Binding Release_Date}" Header="개봉일" />
+                <DataGridTextColumn Binding="{Binding Popularity, StringFormat={}{0:0.0}}" Header="인기도" />
+                <DataGridTextColumn Binding="{Binding Vote_Avreage, StringFormat={}{0:0.0}}" Header="평점" />
+            </DataGrid.Columns>
+        </DataGrid>
 
         <!-- 포스터 영역 -->
         <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
